fixed menu issue on mobile

--- a/frontend/src/app/shared/nav-menu/nav-menu.component.scss
+++ b/frontend/src/app/shared/nav-menu/nav-menu.component.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0px 1px 4px #e5e9f2;
+  // box-shadow: 0px 1px 4px #e5e9f2;
   margin: 0 auto ;
 }
 
